# Deepseek-Usage

./: .env.example  .gitignore  CHANGELOG.md  DeepSeek_API_Monitor.spec  README.md  deepseek_api_monitor.py  deepseek_config.ini.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: USER_GUIDE_CN.md
installer/: ChineseSimplified.isl  setup.iss
scripts/: build.py  dev.py  release.py  sync_to_gitee.py
src/: __init__.py  config.py  gui.py  monitor.py  settings_dialog.py  setup_wizard.py
tests/: test_config.py  test_gui.py  test_monitor.py
